@@ -39,6 +39,7 @@ Cacti CHANGELOG
 -issue#5366: RRDcheck does not log using proper case
 -issue#5372: PHP configuration file may not have expected settings
 -issue#5376: Auth attempts to check for a user lockout when there is no user
+-issue#5377: When attempting to edit a tree, the search filter for Graphs remains disabled
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
